--- a/new-nest-backend/package.json
+++ b/new-nest-backend/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.3",
     "mongoose": "^9.0.1",
     "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
