--- a/new-nest-backend/package.json
+++ b/new-nest-backend/package.json
@@ -50,6 +50,7 @@
     "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.4",
     "@types/passport-jwt": "^4.0.1",
     "@types/socket.io": "^3.0.1",
     "@types/socket.io-client": "^1.4.36",
