--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
+    "framer-motion": "^12.23.26",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
