--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1"
