--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.11.0",
+    "@reduxjs/toolkit": "^2.11.2",
     "framer-motion": "^12.23.26",
+    "js-cookie": "^3.0.5",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
