--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@reduxjs/toolkit": "^2.11.2",
     "framer-motion": "^12.23.26",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
+    "react-datepicker": "^9.0.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
