--- a/backend/package.json
+++ b/backend/package.json
@@ -35,11 +35,12 @@
     "mongoose": "^9.0.1",
     "nodemailer": "^6.9.3",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
