feat(payments): implement Stripe integration with PaymentIntent creation and webhook handling

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,8 @@ MAIL_FROM_NAME=Studiquo
 
 # Optional cookie domain (useful for localhost/ports)
 COOKIE_DOMAIN=localhost
+
+# Stripe API Key
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
