--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.23.26",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
