Update .env.example with Google auth and Stripe configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,30 @@
 PORT=8080
+BACKEND_URL=http://localhost:8080
 FRONTEND_URL=http://localhost:3000
+# Callback must exactly match the Redirect URI configured in Google Cloud
+GOOGLE_CALLBACK_URL=http://localhost:8080/api/auth/google/callback
+
 MONGO_URI=mongodb://localhost:27017/lsm
+
+GOOGLE_CLIENT_ID=<secret-client-id>.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=<secret-client-secret>
+
+# Comma-separated roles allowed for Google sign-in
+ALLOWED_GOOGLE_ROLES=Student,Tutor,Parent
 
 JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=7d
 
-MAIL_HOST=gmail.smtp.com
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USER=developer.joysarkar.fb@gmail.com
 MAIL_PASS=axva kszg lspd htfv
 MAIL_FROM_NAME=Studiquo
+
+# Optional cookie domain (useful for localhost/ports)
+COOKIE_DOMAIN=localhost
+
+# Stripe API Key
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
