--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,3 +28,9 @@ COOKIE_DOMAIN=localhost
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
 STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+
+#AWS S3 Configuration
+AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID_HERE
+AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY_HERE
+AWS_REGION=AWS_REGION_HERE
+S3_BUCKET=your-s3-bucket-name
