--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -15,8 +15,15 @@
         "POST",
         "PUT",
         "PATCH",
-        "DELETE"
-      ]
+        "DELETE",
+        "OPTIONS"
+      ],
+      "headers": {
+        "Access-Control-Allow-Origin": "http://localhost:3000",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, PATCH, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      }
     }
   ]
 }
